--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "clue/commander": "^1.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
