--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "clue/commander": "^1.4"
+        "swew/cli": "^1.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
