--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "8ctopus/stocks",
-    "type": "library",
+    "type": "application",
     "description": "",
     "keywords": [],
     "homepage": "https://github.com/8ctopus/stocks",
